--- a/src/index.html
+++ b/src/index.html
@@ -6,8 +6,22 @@
   <base href="/">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="icon" type="image/x-icon" href="favicon.ico">
+  <style>
+.myclass{
+color:red;
+}
+  </style>
+
 </head>
 <body>
-  <app-root></app-root>
+  <!-- <p class="myclass">hi  iam papa</p>
+ <x></x>  tag selector  
+ <div class="x"></div>  class selector  
+<div x></div> Attribute Selector -->
+
+
+<app-root></app-root>
+
+
 </body>
 </html>
