--- a/src/index.html
+++ b/src/index.html
@@ -22,7 +22,7 @@ color:red;
 <div x></div> Attribute Selector -->
 
 
-<app-root></app-root>
+<app-reactive-form-example></app-reactive-form-example>
 
 
 </body>
