--- a/src/index.html
+++ b/src/index.html
@@ -22,9 +22,10 @@ color:red;
 <div x></div> Attribute Selector -->
 
 
-<!-- <app-reactive-form-example></app-reactive-form-example> -->
+<app-reactive-form-example></app-reactive-form-example>
 
-<app-simple-template-form></app-simple-template-form>
+<!-- <app-simple-template-form></app-simple-template-form> -->
 
+<app-form-builder></app-form-builder>
 </body>
 </html>
