--- a/src/index.html
+++ b/src/index.html
@@ -26,6 +26,6 @@ color:red;
 
 <!-- <app-simple-template-form></app-simple-template-form> -->
 
-<app-form-builder></app-form-builder>
+<app-dynamicform></app-dynamicform>
 </body>
 </html>
