--- a/src/index.html
+++ b/src/index.html
@@ -26,6 +26,6 @@ color:red;
 
 <!-- <app-simple-template-form></app-simple-template-form> -->
 
-<app-dynamicform></app-dynamicform>
+<app-user-app></app-user-app>
 </body>
 </html>
