--- a/src/index.html
+++ b/src/index.html
@@ -22,10 +22,11 @@ color:red;
 <div x></div> Attribute Selector -->
 
 
-<app-reactive-form-example></app-reactive-form-example>
+<!-- <app-reactive-form-example></app-reactive-form-example> -->
 
 <!-- <app-simple-template-form></app-simple-template-form> -->
 
-<app-user-app></app-user-app>
+<!-- <app-user-app></app-user-app> -->
+ <app-layout></app-layout>
 </body>
 </html>
