--- a/src/index.html
+++ b/src/index.html
@@ -27,6 +27,6 @@ color:red;
 <!-- <app-simple-template-form></app-simple-template-form> -->
 
 <!-- <app-user-app></app-user-app> -->
- <app-aggrid-example-component></app-aggrid-example-component>
+ <app-hooks-of-an-angular></app-hooks-of-an-angular>
 </body>
 </html>
